--- a/hashing/templates/hashing/home.html
+++ b/hashing/templates/hashing/home.html
@@ -3,3 +3,25 @@
     {{ form.as_p }}
     <input type="submit" name="submit" value="Hash">
 </form>
+
+<h2 id="quickhash"></h2>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+<script>
+    $('#id_text').keyup(function () {
+        var text = $(this).val();
+
+        $.ajax({
+            url: '{% url 'quickhash' %}',
+            data: {
+                'text': text
+            },
+            dataType: 'json',
+            success: function (data) {
+                $('#quickhash').text(data['hash']);
+            }
+        });
+    });
+</script>
